importing reset.css in index.html

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title>Demo Test</title>
+	<link rel="stylesheet" type="text/css" href="css/reset.css">
 </head>
 <body>
 <h1>Hi this is first heading of test project</h1>
