adding h3 in 10th line by github

--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 <body>
 <h1>Hi this is first heading of test project</h1>
 <h2>test head</h2>
+<span>span in 10th line by local folder</span>
 </body>
 </html>
