--- a/index.html
+++ b/index.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<meta charset="utf-8">
 	<title>Demo Test</title>
 	<link rel="stylesheet" type="text/css" href="css/reset.css">
+	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
 <h1>Hi this is first heading of test project</h1>
 <h2>test head</h2>
 <span>span in 10th line by local folder</span>
+<p>ქართული</p>
 </body>
 </html>
