--- a/index.html
+++ b/index.html
@@ -7,9 +7,14 @@
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
-<h1>Hi this is first heading of test project</h1>
-<h2>test head</h2>
-<span>span in 10th line by local folder</span>
-<p>ქართული</p>
+	<h1 class="title">Computer Science</h1>
+	<p class="lorem1">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+	tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+	quis nostrud exercitation <a href="#" target="_blank">ullamco</a> laboris nisi ut aliquip ex ea commodo
+	consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+	cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+	proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+	
+
 </body>
 </html>
