--- a/contact.html
+++ b/contact.html
@@ -13,18 +13,18 @@
 	<header>
 		<nav class="nav">
 			<ul class="nav-ul">
-				<li class="active-page"><a href="index.html">Home</a></li>
+				<li><a href="index.html">Home</a></li>
 				<li><a href="about.html">About</a></li>
-				<li><a href="contact.html">Contact</a></li>
+				<li class="active-page"><a href="contact.html">Contact</a></li>
 			</ul>
-		</nav>s
+		</nav>
 	</header>
 
 	<main>
-		<h1 class="title">Computer Science</h1>
+		<h1 class="title">Contact Us</h1>
 		<p class="lorem1">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-		quis nostrud exercitation <a href="#" target="_blank">ullamco</a> laboris nisi ut aliquip ex ea commodo
+		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
 		consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
 		cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
 		proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>		
