adding news section...

--- a/contact.html
+++ b/contact.html
@@ -21,13 +21,11 @@
 	</header>
 
 	<main>
-		<h1 class="title">Contact Us</h1>
-		<p class="lorem1">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-		consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-		cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-		proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>		
+		<div class="main-wrapper">
+			<h1>Village in Bulgaria</h1>
+			<p class="lorem1">there is village location</p>
+			<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d5981.560345456095!2d23.238485277364315!3d41.443991309418294!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x14aa2928e233b057%3A0xa00a014cd0f08c0!2s2863%20Rupite%2C%20Bulgaria!5e0!3m2!1sen!2sge!4v1569790574761!5m2!1sen!2sge" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
+		</div>		
 	</main>
 
 	<footer>
