--- a/index.html
+++ b/index.html
@@ -21,13 +21,30 @@
 	</header>
 
 	<main>
-		<h1 class="title">Computer Science</h1>
-		<p class="lorem1">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-		quis nostrud exercitation <a href="#" target="_blank">ullamco</a> laboris nisi ut aliquip ex ea commodo
-		consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-		cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-		proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>		
+		<div class="main-wrapper">
+			<h1>Computer Science</h1>
+			<p class="lorem1">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+			quis nostrud exercitation <a href="#" target="_blank">ullamco</a> laboris nisi ut aliquip ex ea commodo
+			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+			<div class="last-news">
+				<h2>Last News</h2>
+				<div class="news-wrapper">
+					<blockquote cite="https://www.sciencedaily.com/releases/2019/09/190913080731.htm" class="news1">
+						<h3>Brain-inspired computing could tackle big problems in a small way</h3>
+						<img src="images/news1.jpg" alt="brain">
+						<p>While computers have become smaller and more powerful and supercomputers and parallel computing have become the standard, we are about to hit a wall in energy and miniaturization. Now, Penn State researchers have designed a 2D device that can provide more than yes-or-no answers and could be more brainlike than current computing architectures.</p>
+					</blockquote>
+					<blockquote cite="https://www.sciencedaily.com/releases/2019/09/190923111235.htm" class="news1">
+						<h3>An international team of scientists has figured out how to capture heat and turn it into electricity.</h3>
+						<img src="images/news2.jpg" alt="bulb">
+						<p>The discovery, published last week in the journal Science Advances, could create more efficient energy generation from heat in things like car exhaust, interplanetary space probes and industrial processes.</p>
+					</blockquote>
+				</div>
+			</div>
+		</div>		
 	</main>
 
 	<footer>
