--- a/index.html
+++ b/index.html
@@ -6,6 +6,17 @@
 	<link rel="stylesheet" type="text/css" href="css/reset.css">
 	<link rel="stylesheet" type="text/css" href="css/fonts.css">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
+
+	<meta name="description" content="Demo Start">
+	<meta name="keywords" content="HTML,CSS,Demo,Start">
+	<meta name="author" content="Demo">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+	<meta property="og:url"           content="https://demsource.github.io/start/index.html" />
+	<meta property="og:type"          content="website" />
+	<meta property="og:title"         content="Demo Start" />
+	<meta property="og:description"   content="Demo Start Markup" />
+	<meta property="og:image"         content="https://www.your-domain.com/path/image.jpg" />
 </head>
 
 <body>
@@ -52,7 +63,13 @@
 	</footer>
 
 
-
+  <script>(function(d, s, id) {
+    var js, fjs = d.getElementsByTagName(s)[0];
+    if (d.getElementById(id)) return;
+    js = d.createElement(s); js.id = id;
+    js.src = "https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v3.0";
+    fjs.parentNode.insertBefore(js, fjs);
+  }(document, 'script', 'facebook-jssdk'));</script>
 
 </body>
 </html>
