--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	<meta property="og:type"          content="website" />
 	<meta property="og:title"         content="Demo Start" />
 	<meta property="og:description"   content="Demo Start Markup" />
-	<meta property="og:image"         content="https://www.your-domain.com/path/image.jpg" />
+	<meta property="og:image"         content="https://demsource.github.io/start/images/news2.jpg" />
 </head>
 
 <body>
