--- a/about.html
+++ b/about.html
@@ -6,6 +6,11 @@
 	<link rel="stylesheet" type="text/css" href="css/reset.css">
 	<link rel="stylesheet" type="text/css" href="css/fonts.css">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
+
+	<meta name="description" content="Demo Start">
+	<meta name="keywords" content="HTML,CSS,Demo,Start">
+	<meta name="author" content="Demo">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
 <body>
