--- a/contact.html
+++ b/contact.html
@@ -6,6 +6,11 @@
 	<link rel="stylesheet" type="text/css" href="css/reset.css">
 	<link rel="stylesheet" type="text/css" href="css/fonts.css">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
+
+	<meta name="description" content="Demo Start">
+	<meta name="keywords" content="HTML,CSS,Demo,Start">
+	<meta name="author" content="Demo">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
 <body>
@@ -24,7 +29,11 @@
 		<div class="main-wrapper">
 			<h1>Village in Bulgaria</h1>
 			<p class="lorem1">there is village location</p>
-			<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d5981.560345456095!2d23.238485277364315!3d41.443991309418294!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x14aa2928e233b057%3A0xa00a014cd0f08c0!2s2863%20Rupite%2C%20Bulgaria!5e0!3m2!1sen!2sge!4v1569790574761!5m2!1sen!2sge" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
+			<div class="google-wrap">
+					<div class="google-maps">
+							<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d5981.560345456095!2d23.238485277364315!3d41.443991309418294!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x14aa2928e233b057%3A0xa00a014cd0f08c0!2s2863%20Rupite%2C%20Bulgaria!5e0!3m2!1sen!2sge!4v1569790574761!5m2!1sen!2sge" max-width="600" max-height="450" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
+					</div>
+			</div>
 		</div>		
 	</main>
 
